src/objects/Expense_Type__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Calculate_Taxes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Calculate Taxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entry_Type__c</fullName>
        <inlineHelpText>Specifies how expenses will be entered into the system. For example Millage is entered as the quantity of Miles travelled - for this type of expense quantity is selected. Meals are entered as a dollar amount - for this type of expense amount is selected.</inlineHelpText>
        <label>Entry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like users to be able specify taxes for this expense type</inlineHelpText>
        <label>Has Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Tip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Tip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like the expense to be rendered in log format in the monthly report</inlineHelpText>
        <label>Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Field used to keep track of the display order for the expense types</description>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <inlineHelpText>This is the rate to refund at. 
In the case of amount expenses the rate is the percentage of the cost that is refunded. 
In the case of quantity expenses the rate is the refund amount per item.</inlineHelpText>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like comments for this expense type to be shown in the monthly report</inlineHelpText>
        <label>Show Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Included__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Included in Entry</label>
        <type>Checkbox</type>
    </fields>
    <label>Expense Type</label>
    <nameField>
        <label>Expense Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>